--- a/www/static/template/shop_onserver/about.html
+++ b/www/static/template/shop_onserver/about.html
@@ -197,19 +197,14 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="text-holder">
-                    <h2>"We provide full and specific solutions for our every customers."</h2>
-                    <div class="top-text">
-                        <p>Started in the year 1974 with a vision of providing repair solutions to customers and dealers all over USA. Repair Plus, based in Newyork, USA, aims to be one of the best Phone /Laptops & Desktops repair company and leading provider of spare components and tools within USA.</p>
-                    </div>
+                    <h2>"服务至上，质量保证"</h2>
                     <div class="bottom-text">
-                        <p>Our commitment to bring professionalism, good service & trust to the Phone repair service & maintenance business. We take immense pride in sending some of the most of professional technicians.</p>
+                        <p>北国春大棚 隶属于盐城经济技术开发区盼喜农产品经营部 是以现代农业园区规划、温室工程设计施工、现代农业设施研发、设计、制作、安装和设施种植技术咨询。始终坚持以科技创新为先导育苗大棚、养殖大棚、蔬菜大棚等各种类型的温室，及节水灌溉工程,拥有经验丰富的农业种植技术人才，可为客户提供先进的种植技术服务. 拥有技术精湛，经验丰富的技术团队，将竭诚为各界朋友提供出色的农业设施的设计及相关服务。我们本着诚信、专业、热忱的宗旨，与合作伙伴们共同发展壮大! 销售理念：诚信做事，和谐共嬴 　　经营理念：以专业促质量，以质量求生存 　　客户理念：以合作促双赢，以双赢求发展 　　我们的优势：优秀的员工队伍 ，专业的温室建设.</p>
                         <div class="certified-logo">
                             <img src="images/resources/certified-logo.png" alt="Certified Logo">
                         </div>
                     </div>
-                    <div class="signature">
-                        <img src="images/resources/signature.png" alt="Signature">
-                    </div>
+
                 </div>
             </div>
             <div class="col-md-6 col-sm-6 col-xs-12">
