--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -523,7 +523,7 @@
 <!--End about us area-->
 
 <!--Start fact counter area-->
-<section class="fact-counter-area" style="background-image:url(images/resources/fact-counter-bg.jpg);">
+<section class="fact-counter-area" style="background-image:url(images/resources/fact-counter-bg.png);">
     <div class="container">
         <div class="row">
             <!--Start single item-->
