--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>网站首页</title>
-
     <!-- responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- For IE -->
@@ -179,8 +178,6 @@
                      data-responsive_offset="on"
                      data-start="700">
                     <div class="slide-content-box">
-                        <!--<h1>Welcome to RepairPlus <br>quick repair</h1>-->
-                        <!--<p>Using original manufactured parts and components, we are able to<br>restore your cell phones or iDevice to like-new condition.</p>-->
                     </div>
                 </div>
             </li>
@@ -200,67 +197,12 @@
                      data-responsive_offset="on"
                      data-start="500">
                     <div class="slide-content-box">
-                        <!--<h1>We will replace quality <br>accessories</h1>-->
-                        <!--<p>Using original manufactured parts and components, we are able to<br>restore your cell phones or iDevice to like-new condition.</p>-->
                         <div class="button">
-                            <!--<a class="thm-btn bg-1" href="#"></a>    -->
                             <a class="thm-btn bg-2" href="#">联系我们</a>
                         </div>
                     </div>
                 </div>
             </li>
-            <!--<li data-transition="fade">-->
-            <!--<img src="images/slides/3.jpg" alt="" width="1920" height="540" data-bgposition="top center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1" >-->
-            <!---->
-            <!--<div class="tp-caption  tp-resizeme" -->
-            <!--data-x="left" data-hoffset="0" -->
-            <!--data-y="top" data-voffset="125" -->
-            <!--data-transform_idle="o:1;"         -->
-            <!--data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:3000;e:Power3.easeOut;" -->
-            <!--data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" -->
-            <!--data-mask_in="x:[100%];y:0;s:inherit;e:inherit;" -->
-            <!--data-splitin="none" -->
-            <!--data-splitout="none"-->
-            <!--data-responsive_offset="on"-->
-            <!--data-start="700">-->
-            <!--<div class="slide-content-box">-->
-            <!--<h1>We can fix it broken<br>mobile glasses</h1>-->
-            <!--<p>Using original manufactured parts and components, we are able to<br>restore your cell phones or iDevice to like-new condition.</p>-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--<div class="tp-caption tp-resizeme" -->
-            <!--data-x="left" data-hoffset="0" -->
-            <!--data-y="top" data-voffset="350" -->
-            <!--data-transform_idle="o:1;"                         -->
-            <!--data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" -->
-            <!--data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"                     -->
-            <!--data-splitin="none" -->
-            <!--data-splitout="none" -->
-            <!--data-responsive_offset="on"-->
-            <!--data-start="2300">-->
-            <!--<div class="slide-content-box">-->
-            <!--<div class="button">-->
-            <!--<a class="thm-btn bg-1" href=""></a>     -->
-            <!--</div>-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--<div class="tp-caption tp-resizeme" -->
-            <!--data-x="left" data-hoffset="173" -->
-            <!--data-y="top" data-voffset="350" -->
-            <!--data-transform_idle="o:1;"                         -->
-            <!--data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" -->
-            <!--data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"                     -->
-            <!--data-splitin="none" -->
-            <!--data-splitout="none" -->
-            <!--data-responsive_offset="on"-->
-            <!--data-start="2600">-->
-            <!--<div class="slide-content-box">-->
-            <!--<div class="button">-->
-            <!--<a class="thm-btn bg-2" href="">联系我们</a>-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--</li>-->
         </ul>
     </div>
 </section>
@@ -676,12 +618,10 @@
                 <div class="testimonial-carousel">
                     <!--Start single item-->
                     <div class="single-item text-center">
-                        <div class="img-holder">
-                            <img src="images/testimonial/1.png" alt="Awesome Image">
-                        </div>
+                            <img src="images/testimonial/201704051744306594.jpg" alt="Awesome Image">
                         <div class="text-holder">
-                            <h5>连栋大棚</h5>
-                            <p>Excellent service and swift repair and I get to keep my Phone. I feel Really great.</p>
+                            <h5>案例分类</h5>
+                            <!--<p>Excellent service and swift repair and I get to keep my Phone. I feel Really great.</p>-->
                         </div>
                         <div class="client-info">
                             <div class="name pull-left">
@@ -696,12 +636,10 @@
                     <!--End single item-->
                     <!--Start single item-->
                     <div class="single-item text-center">
-                        <div class="img-holder">
-                            <img src="images/testimonial/2.png" alt="Awesome Image">
-                        </div>
+                            <img src="images/testimonial/201704051750138098.jpg" alt="Awesome Image">
                         <div class="text-holder">
                             <h5>花卉大棚</h5>
-                            <p>Great service as this was2nd repair with Mr.Fixit, excellent communication.</p>
+                            <!--<p>花卉大棚</p>-->
                         </div>
                         <div class="client-info">
                             <div class="name pull-left">
@@ -716,9 +654,7 @@
                     <!--End single item-->
                     <!--Start single item-->
                     <div class="single-item text-center">
-                        <div class="img-holder">
-                            <img src="images/testimonial/3.png" alt="Awesome Image">
-                        </div>
+                            <img src="images/testimonial/201704051744382575.jpg" alt="Awesome Image">
                         <div class="text-holder">
                             <h5>蔬菜大棚</h5>
                             <p>Repaired my iPhone 6s through thorough examination, updated at all times.</p>
@@ -741,43 +677,43 @@
 </section>
 <!--End testimonial area-->
 
-<!--Start Brand area-->
-<section class="brand-area">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="brand">
-                    <!--Start single item-->
-                    <div class="single-item">
-                        <a href="#"><img src="images/brand/1.jpg" alt="Awesome Brand Image"></a>
-                    </div>
-                    <!--End single item-->
-                    <!--Start single item-->
-                    <div class="single-item">
-                        <a href="#"><img src="images/brand/2.jpg" alt="Awesome Brand Image"></a>
-                    </div>
-                    <!--End single item-->
-                    <!--Start single item-->
-                    <div class="single-item">
-                        <a href="#"><img src="images/brand/3.jpg" alt="Awesome Brand Image"></a>
-                    </div>
-                    <!--End single item-->
-                    <!--Start single item-->
-                    <div class="single-item">
-                        <a href="#"><img src="images/brand/4.jpg" alt="Awesome Brand Image"></a>
-                    </div>
-                    <!--End single item-->
-                    <!--Start single item-->
-                    <div class="single-item">
-                        <a href="#"><img src="images/brand/5.jpg" alt="Awesome Brand Image"></a>
-                    </div>
-                    <!--End single item-->
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!--End Brand area-->
+<!--&lt;!&ndash;Start Brand area&ndash;&gt;-->
+<!--<section class="brand-area">-->
+    <!--<div class="container">-->
+        <!--<div class="row">-->
+            <!--<div class="col-md-12">-->
+                <!--<div class="brand">-->
+                    <!--&lt;!&ndash;Start single item&ndash;&gt;-->
+                    <!--<div class="single-item">-->
+                        <!--<a href="#"><img src="images/brand/1.jpg" alt="Awesome Brand Image"></a>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash;End single item&ndash;&gt;-->
+                    <!--&lt;!&ndash;Start single item&ndash;&gt;-->
+                    <!--<div class="single-item">-->
+                        <!--<a href="#"><img src="images/brand/2.jpg" alt="Awesome Brand Image"></a>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash;End single item&ndash;&gt;-->
+                    <!--&lt;!&ndash;Start single item&ndash;&gt;-->
+                    <!--<div class="single-item">-->
+                        <!--<a href="#"><img src="images/brand/3.jpg" alt="Awesome Brand Image"></a>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash;End single item&ndash;&gt;-->
+                    <!--&lt;!&ndash;Start single item&ndash;&gt;-->
+                    <!--<div class="single-item">-->
+                        <!--<a href="#"><img src="images/brand/4.jpg" alt="Awesome Brand Image"></a>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash;End single item&ndash;&gt;-->
+                    <!--&lt;!&ndash;Start single item&ndash;&gt;-->
+                    <!--<div class="single-item">-->
+                        <!--<a href="#"><img src="images/brand/5.jpg" alt="Awesome Brand Image"></a>-->
+                    <!--</div>-->
+                    <!--&lt;!&ndash;End single item&ndash;&gt;-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</section>-->
+<!--&lt;!&ndash;End Brand area&ndash;&gt;-->
 
 <!--Start footer area-->
 <footer class="footer-area">
