--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -466,51 +466,6 @@
 
 <!--Start fact counter area-->
 <section class="fact-counter-area" style="background-image:url(images/resources/fact-counter-bg.png);">
-    <div class="container">
-        <div class="row">
-            <!--Start single item-->
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="single-item text-center">
-                    <h1><span class="timer" data-from="1" data-to="2456" data-speed="5000" data-refresh-interval="50">2456</span>
-                    </h1>
-                    <span class="border"></span>
-                    <h3>Mobiles Repaired</h3>
-                </div>
-            </div>
-            <!--End single item-->
-            <!--Start single item-->
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="single-item text-center">
-                    <h1><span class="timer" data-from="1" data-to="146" data-speed="5000"
-                              data-refresh-interval="50">146</span><i class="fa fa-plus" aria-hidden="true"></i></h1>
-                    <span class="border"></span>
-                    <h3>Expert Technicians</h3>
-                </div>
-            </div>
-            <!--End single item-->
-            <!--Start single item-->
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="single-item text-center">
-                    <h1><span class="timer" data-from="1" data-to="853" data-speed="5000"
-                              data-refresh-interval="50">853</span><i class="fa fa-plus" aria-hidden="true"></i></h1>
-                    <span class="border"></span>
-                    <h3>Happy Customers</h3>
-                </div>
-            </div>
-            <!--End single item-->
-            <!--Start single item-->
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="single-item text-center">
-                    <h1><span class="timer" data-from="1" data-to="2381" data-speed="5000" data-refresh-interval="50">2381</span>
-                    </h1>
-                    <span class="border"></span>
-                    <h3>Desktop Repaired</h3>
-                </div>
-            </div>
-            <!--End single item-->
-
-        </div>
-    </div>
 </section>
 <!--End fact counter area-->
 <!--Start latest blog area-->
@@ -626,7 +581,7 @@
                         <div class="client-info">
                             <div class="name pull-left">
                                 <h6>拱形大棚</h6>
-                                <p>Newyork City</p>
+                                <p>拱形大棚</p>
                             </div>
                             <div class="rating-box pull-right">
                                 <p>4.5<i class="fa fa-star" aria-hidden="true"></i></p>
@@ -643,8 +598,8 @@
                         </div>
                         <div class="client-info">
                             <div class="name pull-left">
-                                <h6>Astley Fletcher</h6>
-                                <p>Los Angles</p>
+                                <h6>花卉大棚</h6>
+                                <p>花卉大棚</p>
                             </div>
                             <div class="rating-box pull-right">
                                 <p>5.0<i class="fa fa-star" aria-hidden="true"></i></p>
@@ -657,7 +612,7 @@
                             <img src="images/testimonial/201704051744382575.jpg" alt="Awesome Image">
                         <div class="text-holder">
                             <h5>蔬菜大棚</h5>
-                            <p>Repaired my iPhone 6s through thorough examination, updated at all times.</p>
+                            <p>蔬菜大棚</p>
                         </div>
                         <div class="client-info">
                             <div class="name pull-left">
@@ -675,46 +630,6 @@
         </div>
     </div>
 </section>
-<!--End testimonial area-->
-
-<!--&lt;!&ndash;Start Brand area&ndash;&gt;-->
-<!--<section class="brand-area">-->
-    <!--<div class="container">-->
-        <!--<div class="row">-->
-            <!--<div class="col-md-12">-->
-                <!--<div class="brand">-->
-                    <!--&lt;!&ndash;Start single item&ndash;&gt;-->
-                    <!--<div class="single-item">-->
-                        <!--<a href="#"><img src="images/brand/1.jpg" alt="Awesome Brand Image"></a>-->
-                    <!--</div>-->
-                    <!--&lt;!&ndash;End single item&ndash;&gt;-->
-                    <!--&lt;!&ndash;Start single item&ndash;&gt;-->
-                    <!--<div class="single-item">-->
-                        <!--<a href="#"><img src="images/brand/2.jpg" alt="Awesome Brand Image"></a>-->
-                    <!--</div>-->
-                    <!--&lt;!&ndash;End single item&ndash;&gt;-->
-                    <!--&lt;!&ndash;Start single item&ndash;&gt;-->
-                    <!--<div class="single-item">-->
-                        <!--<a href="#"><img src="images/brand/3.jpg" alt="Awesome Brand Image"></a>-->
-                    <!--</div>-->
-                    <!--&lt;!&ndash;End single item&ndash;&gt;-->
-                    <!--&lt;!&ndash;Start single item&ndash;&gt;-->
-                    <!--<div class="single-item">-->
-                        <!--<a href="#"><img src="images/brand/4.jpg" alt="Awesome Brand Image"></a>-->
-                    <!--</div>-->
-                    <!--&lt;!&ndash;End single item&ndash;&gt;-->
-                    <!--&lt;!&ndash;Start single item&ndash;&gt;-->
-                    <!--<div class="single-item">-->
-                        <!--<a href="#"><img src="images/brand/5.jpg" alt="Awesome Brand Image"></a>-->
-                    <!--</div>-->
-                    <!--&lt;!&ndash;End single item&ndash;&gt;-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</section>-->
-<!--&lt;!&ndash;End Brand area&ndash;&gt;-->
-
 <!--Start footer area-->
 <footer class="footer-area">
     <div class="container">
