--- a/www/static/template/shop_onserver/about.html
+++ b/www/static/template/shop_onserver/about.html
@@ -112,25 +112,9 @@
                         <ul class="navigation clearfix">
                             <li><a href="index.html">网站首页</a></li>
                             <li><a href="services.html">我们的服务</a></li>
-                            <li class="dropdown current"><a href="about.html">Pages</a>
-                                <ul>
-                                    <li><a href="about.html">关于我们</a></li>
-                                    <li><a href="team.html">Meet Our Team</a></li>
-                                    <li><a href="faq.html">FAQ’s</a></li>
-                                    <li><a href="faq-single.html">FAQ's Single</a></li>
-                                    <li><a href="testimonial.html">Testimonials</a></li>
-                                    <li><a href="pricing.html">Pricing Plans</a></li>
-                                    <li><a href="404.html">404 Page</a></li>
-                                </ul>
+                            <li class="dropdown current"><a href="about.html">关于我们</a>
                             </li>
                             <li class="dropdown"><a href="shop.html">产品中心</a>
-                                <ul>
-                                    <li><a href="shop.html">产品中心 Products</a></li>
-                                    <li><a href="shop-single.html">Single Product</a></li>
-                                    <li><a href="shopping-cart.html">产品中心ping Cart</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
-                                    <li><a href="account.html">My Account</a></li>
-                                </ul>
                             </li>
                             <li><a href="blog.html">行业动态</a></li>
                             <li><a href="contact.html">联系我们</a></li>
