--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -474,7 +474,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="sec-title-two pull-left">
-                    <h1>最近更新</h1>
+                    <h1>行业动态</h1>
                 </div>
                 <div class="button pull-right">
                     <a href="blog.html">更多<i class="fa fa-caret-right" aria-hidden="true"></i></a>
