--- a/www/static/template/shop_onserver/shopping-cart.html
+++ b/www/static/template/shop_onserver/shopping-cart.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>产品中心ping Cart</title>
+	<title>购物车</title>
 
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -116,11 +116,10 @@
                             <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown current"><a href="shop.html">产品中心</a>
                                 <ul>
-                                    <li><a href="shop.html">产品中心 Products</a></li>
-                                    <li><a href="shop-single.html">Single Product</a></li>
-                                    <li><a href="shopping-cart.html">产品中心ping Cart</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
-                                    <li><a href="account.html">My Account</a></li>
+                                    <li><a href="shop.html">产品中心</a></li>
+                                    <li><a href="shop-single.html">单品</a></li>
+                                    <li><a href="shopping-cart.html">购物车</a></li>
+
                                 </ul>
                             </li>
                             <li><a href="blog.html">行业动态</a></li>
@@ -160,7 +159,7 @@
 <!--Start breadcrumb area-->     
 <section class="breadcrumb-area">
 	<div class="container text-center">
-		<h1>产品中心ping Cart</h1>
+		<h1>购物车</h1>
 	</div>
 </section>
 <!--End breadcrumb area-->
@@ -174,7 +173,7 @@
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
                 <li><a href="shop.html">产品中心</a></li>
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
-                <li>产品中心ping Cart</li>
+                <li>购物车</li>
             </ul>    
         </div>
         <div class="right pull-right">
