--- a/www/static/template/shop_onserver/services.html
+++ b/www/static/template/shop_onserver/services.html
@@ -125,11 +125,10 @@
                             <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown"><a href="shop.html">产品中心</a>
                                 <ul>
-                                    <li><a href="shop.html">产品中心 Products</a></li>
-                                    <li><a href="shop-single.html">Single Product</a></li>
-                                    <li><a href="shopping-cart.html">产品中心ping Cart</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
-                                    <li><a href="account.html">My Account</a></li>
+                                    <li><a href="shop.html">产品中心</a></li>
+                                    <li><a href="shop-single.html">单品</a></li>
+                                    <li><a href="shopping-cart.html">购物车</a></li>
+
                                 </ul>
                             </li>
                             <li><a href="blog.html">行业动态</a></li>
