--- a/www/static/template/shop_onserver/shop-single.html
+++ b/www/static/template/shop_onserver/shop-single.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Single Product</title>
+	<title>单品</title>
 
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -116,9 +116,9 @@
                             <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown current"><a href="shop.html">产品中心</a>
                                 <ul>
-                                    <li><a href="shop.html">产品中心 Products</a></li>
-                                    <li><a href="shop-single.html">Single Product</a></li>
-                                    <li><a href="shopping-cart.html">产品中心ping Cart</a></li>
+                                    <li><a href="shop.html">产品中心</a></li>
+                                    <li><a href="shop-single.html">单品</a></li>
+                                    <li><a href="shopping-cart.html">购物车</a></li>
 
                                 </ul>
                             </li>
@@ -159,7 +159,7 @@
 <!--Start breadcrumb area-->     
 <section class="breadcrumb-area">
 	<div class="container text-center">
-		<h1>Single Product</h1>
+		<h1>单品</h1>
 	</div>
 </section>
 <!--End breadcrumb area-->
@@ -173,7 +173,7 @@
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
                 <li><a href="shop.html">产品中心</a></li>
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
-                <li>Single Product</li>
+                <li>单品</li>
             </ul>    
         </div>
         <div class="right pull-right">
