--- a/www/static/template/shop_onserver/about.html
+++ b/www/static/template/shop_onserver/about.html
@@ -183,7 +183,7 @@
                 <div class="text-holder">
                     <h2>"服务至上，质量保证"</h2>
                     <div class="bottom-text">
-                        <p>北国春大棚 隶属于盐城经济技术开发区盼喜农产品经营部 是以现代农业园区规划、温室工程设计施工、现代农业设施研发、设计、制作、安装和设施种植技术咨询。始终坚持以科技创新为先导育苗大棚、养殖大棚、蔬菜大棚等各种类型的温室，及节水灌溉工程,拥有经验丰富的农业种植技术人才，可为客户提供先进的种植技术服务. 拥有技术精湛，经验丰富的技术团队，将竭诚为各界朋友提供出色的农业设施的设计及相关服务。我们本着诚信、专业、热忱的宗旨，与合作伙伴们共同发展壮大! 销售理念：诚信做事，和谐共嬴 　　经营理念：以专业促质量，以质量求生存 　　客户理念：以合作促双赢，以双赢求发展 　　我们的优势：优秀的员工队伍 ，专业的温室建设.</p>
+                        <p>公司主要供应，大棚支架机，温室大棚，蔬菜大棚，花卉大棚，养殖大棚，钢管镀塑大棚产品、镀锌钢管大棚，几字钢大棚产品，已达到同行业良好水平，广泛运用于春秋蔬菜大棚、反季节温室蔬菜大棚、智能化温室大棚、阳光板真空玻璃大棚、花卉大棚、食用菌种植大棚、各种育苗大棚、各种牲畜养殖大棚、生态观光餐厅等，公司常年承接各种大棚工程，公司服务满足不同客户的需求，不断为客户提供满意的高科技产品，公司以诚信为原则，以创新为动力，以发展为目标，精诚协作，以我们不懈的努力，追求你的满意，并以您的满意作为我们的追求。</p>
                         <div class="certified-logo">
                             <img src="images/resources/certified-logo.png" alt="Certified Logo">
                         </div>
@@ -216,7 +216,7 @@
             <div class="col-md-8 content pull-right">
                 <div class="text-holder">
                     <div class="sec-title-two">
-                        <h1>Our Core Values</h1>
+                        <h1>工程案例</h1>
                         <span class="border"></span>
                     </div>
                     <div class="row">
@@ -227,7 +227,7 @@
                                     <span class="flaticon-thumb-up"></span>
                                 </div>
                                 <div class="text-box">
-                                    <h3>Positive & Optimistic</h3>
+                                    <h3>鸿源温室鲁山县食用菌棚完</h3>
                                     <p>How all this mistaken idea denouncing seds pleasurepraising pain was born and will give you a complete account of the system.</p>
                                 </div>
                             </div>
@@ -240,7 +240,7 @@
                                     <span class="flaticon-star"></span>
                                 </div>
                                 <div class="text-box">
-                                    <h3>Wow Customer Service</h3>
+                                    <h3>鸿源温室鲁山县食用菌棚完工</h3>
                                     <p>Some great pleasure take trivial example, whichof ever undertakes laborious physical except to obtain some advantage.</p>
                                 </div>
                             </div>
