--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -136,7 +136,7 @@
                     </div>
                     <div class="title-holder">
                         <h5>全国服务热线</h5>
-                        <h4><a href="tel:15195986013">15195986013</a></h4>
+                        <h4><a href="tel:18505266333">18505266333</a></h4>
                     </div>
                 </div>
                 <div class="top-search-box pull-right">
@@ -197,7 +197,7 @@
                      data-start="500">
                     <div class="slide-content-box">
                         <div class="button">
-                            <a class="thm-btn bg-2" href="#">联系我们</a>
+                            <a class="thm-btn bg-2" href="tel:18505266333">联系我们</a>
                         </div>
                     </div>
                 </div>
