--- a/www/static/template/shop_onserver/about.html
+++ b/www/static/template/shop_onserver/about.html
@@ -197,7 +197,7 @@
                     <div class="overlay-gallery">
                         <div class="icon-holder">
                             <div class="icon">
-                                <a class="html5lightbox" title="RepairPlus Gallery" href=""><img src="images/icon/play-btn.png" alt="Play Button"></a>
+                                <a class="" title="" href=""><img src="images/icon/play-btn.png" alt="Play Button"></a>
                             </div>
                         </div>
                     </div>
