--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -173,7 +173,7 @@
                      data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
                      data-mask_in="x:[100%];y:0;s:inherit;e:inherit;"
                      data-splitin="none"
-                     data-splitout="none"
+                     data-splitout="none" re
                      data-responsive_offset="on"
                      data-start="700">
                     <div class="slide-content-box">
