--- a/www/static/template/shop_onserver/shop.html
+++ b/www/static/template/shop_onserver/shop.html
@@ -211,23 +211,55 @@
 <section id="shop-area" class="main-shop-area">
     <div class="container">
         <div class="row">
+            <!--Start sidebar Wrapper-->
+            <div class="col-lg-3 col-md-4 col-sm-7 col-xs-12">
+                <div class="sidebar-wrapper">
+                    <!--Start single sidebar-->
+                    <div class="single-sidebar">
+                        <div class="sidebar-title">
+                            <h1>产品列表</h1>
+                        </div>
+                        <ul class="categories clearfix">
+                            <li>
+                                <a href="#">
+                                    连栋大棚
+                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    拱形大棚
+                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    花卉大棚
+                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    蔬菜大棚
+                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    养殖大棚
+                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--End single sidebar-->
+                    <!--Start single sidebar-->
+                    <!--End single sidebar-->
+                </div>
+            </div>
+            <!--End Sidebar Wrapper-->
             <div class="col-lg-9 col-md-8 col-sm-12 col-xs-12">
                 <div class="shop-content">
-                    <div class="row showing-result-shorting">
-                        <div class="col-md-12">
-                            <div class="showing pull-left">
-                                <p>Showing 1-12 of 15 results</p>
-                            </div>
-                            <div class="shorting pull-right">
-                                <select class="selectmenu">
-                                    <option selected="selected">Default Sorting</option>
-                                    <option>Default Sorting one</option>
-                                    <option>Default Sorting Two</option>
-                                    <option>Default Sorting Three</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
                     <div class="row">
                         <!--Start single product item-->
                         <div class="col-md-4 col-sm-4 col-xs-12">
@@ -569,61 +601,7 @@
                     <!--End post pagination-->
                 </div>
             </div>
-            <!--Start sidebar Wrapper-->
-            <div class="col-lg-3 col-md-4 col-sm-7 col-xs-12">
-                <div class="sidebar-wrapper">
-                    <!--Start single sidebar-->
-                    <div class="single-sidebar">
-                        <form class="search-form" action="#">
-							<input placeholder="Search..." type="text">
-							<button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-						</form>
-                    </div>
-                    <!--End single sidebar-->
-                    <!--Start single sidebar-->
-                    <div class="single-sidebar">
-                        <div class="sidebar-title">
-                            <h1>Categories</h1>
-                        </div>
-                        <ul class="categories clearfix">
-                            <li>
-                                <a href="#">
-                                    连栋大棚
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    拱形大棚
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    花卉大棚
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    蔬菜大棚
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    养殖大棚
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--End single sidebar-->
-                    <!--Start single sidebar-->
-                    <!--End single sidebar-->
-                </div>
-            </div>
-            <!--End Sidebar Wrapper-->
+
         </div>
     </div>
 </section>
