--- a/www/static/template/shop_onserver/shop.html
+++ b/www/static/template/shop_onserver/shop.html
@@ -219,7 +219,7 @@
                         <div class="sidebar-title">
                             <h1>产品列表</h1>
                         </div>
-                        <ul class="categories clearfix">
+                        <ul class="categories clearfix" id="list">
                             <li data-title="连栋大棚">
                                 <a href="#">
                                     连栋大棚
