--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -572,8 +572,9 @@
                 <div class="testimonial-carousel">
                     <!--Start single item-->
                     <div class="single-item text-center">
+                        <img src="images/testimonial/3.jpg" alt="Awesome Image">
                         <div class="text-holder">
-                            <h5>案例分类</h5>
+                            <h5>拱形大棚</h5>
                             <!--<p>Excellent service and swift repair and I get to keep my Phone. I feel Really great.</p>-->
                         </div>
                         <div class="client-info">
@@ -589,7 +590,7 @@
                     <!--End single item-->
                     <!--Start single item-->
                     <div class="single-item text-center">
-                            <img src="images/testimonial/201704051750138098.jpg" alt="Awesome Image">
+                            <img src="images/testimonial/2.jpg" alt="Awesome Image">
                         <div class="text-holder">
                             <h5>花卉大棚</h5>
                             <!--<p>花卉大棚</p>-->
@@ -607,10 +608,10 @@
                     <!--End single item-->
                     <!--Start single item-->
                     <div class="single-item text-center">
-                            <img src="images/testimonial/201704051744382575.jpg" alt="Awesome Image">
+                            <img src="images/testimonial/1.jpg" alt="Awesome Image">
                         <div class="text-holder">
-                            <h5>蔬菜大棚</h5>
-                            <p>蔬菜大棚</p>
+                            <h5>养殖大棚</h5>
+                            <p>养殖大棚</p>
                         </div>
                         <div class="client-info">
                             <div class="name pull-left">
