--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -496,11 +496,11 @@
                     </div>
                     <div class="text-holder">
                         <ul class="meta-info">
-                            <li><i class="fa fa-user" aria-hidden="true"></i><a href="#">Fletcher</a></li>
-                            <li><i class="fa fa-clock-o" aria-hidden="true"></i><a href="#">April 21, 2016</a></li>
+                            <li><i class="fa fa-user" aria-hidden="true"></i><a href="#">李玉</a></li>
+                            <li><i class="fa fa-clock-o" aria-hidden="true"></i><a href="#">2019 年3月14</a></li>
                         </ul>
                         <a href="blog-single.html">
-                            <h3 class="blog-title">iPad Repairs For Schools / Universities Across The Usa</h3>
+                            <h3 class="blog-title">大棚大棚菜地施肥要注意土壤变化</h3>
                         </a>
                     </div>
                 </div>
@@ -521,11 +521,11 @@
                     </div>
                     <div class="text-holder">
                         <ul class="meta-info">
-                            <li><i class="fa fa-user" aria-hidden="true"></i><a href="#">Fletcher</a></li>
-                            <li><i class="fa fa-clock-o" aria-hidden="true"></i><a href="#">April 11, 2016</a></li>
+                            <li><i class="fa fa-user" aria-hidden="true"></i><a href="#">王飞</a></li>
+                            <li><i class="fa fa-clock-o" aria-hidden="true"></i><a href="#">2019 年3月14</a></li>
                         </ul>
                         <a href="blog-single.html">
-                            <h3 class="blog-title">We offer the best in same day iPhone Repairs plymouth</h3>
+                            <h3 class="blog-title">适宜冬季大棚大棚种植的四种方法</h3>
                         </a>
                     </div>
                 </div>
@@ -546,11 +546,11 @@
                     </div>
                     <div class="text-holder">
                         <ul class="meta-info">
-                            <li><i class="fa fa-user" aria-hidden="true"></i><a href="#">Fletcher</a></li>
-                            <li><i class="fa fa-clock-o" aria-hidden="true"></i><a href="#">March 15, 2016</a></li>
+                            <li><i class="fa fa-user" aria-hidden="true"></i><a href="#">张瀚</a></li>
+                            <li><i class="fa fa-clock-o" aria-hidden="true"></i><a href="#">2019 年3月14</a></li>
                         </ul>
                         <a href="blog-single.html">
-                            <h3 class="blog-title">All Software Boxes and Dongles At Best Prices</h3>
+                            <h3 class="blog-title">智能大棚大棚盛夏时如何管理？</h3>
                         </a>
                     </div>
                 </div>
@@ -615,8 +615,8 @@
                         </div>
                         <div class="client-info">
                             <div class="name pull-left">
-                                <h6>Mitchel Starc</h6>
-                                <p>California</p>
+                                <h6>养殖大棚</h6>
+                                <p>养殖大棚</p>
                             </div>
                             <div class="rating-box pull-right">
                                 <p>5.0<i class="fa fa-star" aria-hidden="true"></i></p>
